[gd_scene load_steps=17 format=3 uid="uid://fsw37e6bhjnn"]

[ext_resource type="Theme" uid="uid://cjww2dp7ckflf" path="res://assets/theme.tres" id="1_fviui"]
[ext_resource type="PackedScene" uid="uid://c2odel3v0vcjp" path="res://assets/scenes/buttons/execute_button.tscn" id="2_7h4pu"]
[ext_resource type="Script" uid="uid://crmuuucfppfbm" path="res://assets/scenes/program.gd" id="2_8gkjr"]
[ext_resource type="Script" uid="uid://dk66k0b0qeyc5" path="res://assets/scripts/subwindow_locker.gd" id="3_4dhct"]
[ext_resource type="Texture2D" uid="uid://dobelhvexued5" path="res://assets/icons/Progress1.svg" id="4_hhpkv"]
[ext_resource type="Texture2D" uid="uid://ciecbyccj4ly0" path="res://assets/icons/Progress2.svg" id="5_aq2xk"]
[ext_resource type="Texture2D" uid="uid://cci2wg3061fgr" path="res://assets/icons/Progress3.svg" id="6_l5x0v"]
[ext_resource type="Texture2D" uid="uid://7sko2bbqlc0f" path="res://assets/icons/Progress4.svg" id="7_3ohc4"]
[ext_resource type="Texture2D" uid="uid://cjbls0use7e1i" path="res://assets/icons/Progress5.svg" id="8_dlt1i"]
[ext_resource type="Texture2D" uid="uid://8lo0qtgwop2m" path="res://assets/icons/Progress6.svg" id="9_nr517"]
[ext_resource type="Texture2D" uid="uid://dvcurv44d1wax" path="res://assets/icons/Progress7.svg" id="10_yiv2u"]
[ext_resource type="Texture2D" uid="uid://dt5l6jve4grg2" path="res://assets/icons/Progress8.svg" id="11_s8aa0"]

[sub_resource type="LabelSettings" id="LabelSettings_d4w2p"]
font_size = 24

[sub_resource type="GDScript" id="GDScript_fviui"]
resource_name = "time_elapsed"
script/source = "extends Label

@export var execute_button : Button

func _process(delta: float) -> void:
	if execute_button.button_pressed:
		self.text = get_duration_string(Time.get_ticks_msec() - execute_button.time_started)

func get_duration_string(msec: int) -> String:    
	var total_seconds : int = msec / 1000
	var seconds : int = total_seconds % 60
	var minutes : int = total_seconds / 60
	var hours : int = total_seconds / 3600

	if hours > 0:
		return \"%02d:%02d:%02d\" % [hours, minutes, seconds]
	else:
		return \"%02d:%02d\" % [minutes, seconds]
"

[sub_resource type="ViewportTexture" id="ViewportTexture_4lvpc"]
viewport_path = NodePath("panel_container/margin_container/v_box_container/main/h_split_container/v_box_container/left_panel/subwindow_locker/texture_rect/sub_viewport")

[sub_resource type="SpriteFrames" id="SpriteFrames_01wmh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_hhpkv")
}, {
"duration": 1.0,
"texture": ExtResource("5_aq2xk")
}, {
"duration": 1.0,
"texture": ExtResource("6_l5x0v")
}, {
"duration": 1.0,
"texture": ExtResource("7_3ohc4")
}, {
"duration": 1.0,
"texture": ExtResource("8_dlt1i")
}, {
"duration": 1.0,
"texture": ExtResource("9_nr517")
}, {
"duration": 1.0,
"texture": ExtResource("10_yiv2u")
}, {
"duration": 1.0,
"texture": ExtResource("11_s8aa0")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[node name="program" type="Control" node_paths=PackedStringArray("execute_button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_fviui")
script = ExtResource("2_8gkjr")
execute_button = NodePath("panel_container/margin_container/v_box_container/main/h_split_container/v_box_container/h_box_container/execute_button")

[node name="panel_container" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="margin_container" type="MarginContainer" parent="panel_container"]
layout_mode = 2

[node name="v_box_container" type="VBoxContainer" parent="panel_container/margin_container"]
layout_mode = 2

[node name="header" type="HBoxContainer" parent="panel_container/margin_container/v_box_container"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="label" type="Label" parent="panel_container/margin_container/v_box_container/header"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "Title"
label_settings = SubResource("LabelSettings_d4w2p")
vertical_alignment = 1

[node name="label_time_elapsed" type="Label" parent="panel_container/margin_container/v_box_container/header" node_paths=PackedStringArray("execute_button")]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "00:00"
label_settings = SubResource("LabelSettings_d4w2p")
horizontal_alignment = 2
vertical_alignment = 1
script = SubResource("GDScript_fviui")
execute_button = NodePath("../../main/h_split_container/v_box_container/h_box_container/execute_button")

[node name="main" type="Control" parent="panel_container/margin_container/v_box_container"]
layout_mode = 2
size_flags_vertical = 3

[node name="h_split_container" type="HSplitContainer" parent="panel_container/margin_container/v_box_container/main"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="v_box_container" type="VBoxContainer" parent="panel_container/margin_container/v_box_container/main/h_split_container"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="left_panel" type="PanelContainer" parent="panel_container/margin_container/v_box_container/main/h_split_container/v_box_container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="scroll_container" type="ScrollContainer" parent="panel_container/margin_container/v_box_container/main/h_split_container/v_box_container/left_panel"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="margin_container" type="MarginContainer" parent="panel_container/margin_container/v_box_container/main/h_split_container/v_box_container/left_panel/scroll_container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="subwindow_locker" type="Control" parent="panel_container/margin_container/v_box_container/main/h_split_container/v_box_container/left_panel"]
visible = false
layout_mode = 2
script = ExtResource("3_4dhct")

[node name="texture_rect" type="TextureRect" parent="panel_container/margin_container/v_box_container/main/h_split_container/v_box_container/left_panel/subwindow_locker"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(64, 64)
texture = SubResource("ViewportTexture_4lvpc")

[node name="sub_viewport" type="SubViewport" parent="panel_container/margin_container/v_box_container/main/h_split_container/v_box_container/left_panel/subwindow_locker/texture_rect"]
transparent_bg = true
size = Vector2i(64, 64)

[node name="sprite_2d" type="AnimatedSprite2D" parent="panel_container/margin_container/v_box_container/main/h_split_container/v_box_container/left_panel/subwindow_locker/texture_rect/sub_viewport"]
sprite_frames = SubResource("SpriteFrames_01wmh")
frame_progress = 0.675266
centered = false

[node name="h_box_container" type="HBoxContainer" parent="panel_container/margin_container/v_box_container/main/h_split_container/v_box_container"]
layout_mode = 2

[node name="execute_button" parent="panel_container/margin_container/v_box_container/main/h_split_container/v_box_container/h_box_container" instance=ExtResource("2_7h4pu")]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="queue_button" type="Button" parent="panel_container/margin_container/v_box_container/main/h_split_container/v_box_container/h_box_container"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Queue"

[node name="right_panel" type="PanelContainer" parent="panel_container/margin_container/v_box_container/main/h_split_container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="scroll_container" type="ScrollContainer" parent="panel_container/margin_container/v_box_container/main/h_split_container/right_panel"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="margin_container" type="MarginContainer" parent="panel_container/margin_container/v_box_container/main/h_split_container/right_panel/scroll_container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="close_confirmation" type="ConfirmationDialog" parent="."]
initial_position = 1
size = Vector2i(281, 106)
dialog_text = "This program is still running.
Are you sure you want to close it?"

[connection signal="execute_finished" from="." to="panel_container/margin_container/v_box_container/main/h_split_container/v_box_container/h_box_container/execute_button" method="set_pressed" binds= [false]]
[connection signal="visibility_changed" from="panel_container/margin_container/v_box_container/main/h_split_container/v_box_container/left_panel/subwindow_locker/texture_rect/sub_viewport/sprite_2d" to="panel_container/margin_container/v_box_container/main/h_split_container/v_box_container/left_panel/subwindow_locker/texture_rect/sub_viewport/sprite_2d" method="play" binds= [&"default"]]
[connection signal="canceled" from="panel_container/margin_container/v_box_container/main/h_split_container/v_box_container/h_box_container/execute_button" to="." method="terminate"]
[connection signal="executed" from="panel_container/margin_container/v_box_container/main/h_split_container/v_box_container/h_box_container/execute_button" to="." method="execute"]
[connection signal="confirmed" from="close_confirmation" to="." method="exit"]
